<resources>
    <string name="app_name">WTTapp</string>

    <string name="server_client_id">294619210953-lo805f9tfv3bnunf2u2449ent65d7jsp.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user1">User1</string>
    <string name="user2">user2</string>

    // Strings for User Info. Page
    <string name="welcome_msg">Welcome to your Work Time Tracker!</string>
    <string name="display_username"> </string>
    <string name="next"> Next </string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string-array name="spinner">
        <item> </item>
        <item>Self-Employed</item>
        <item>Employee</item>
    </string-array>

    // Strings for Sign-Up Page
    <string name="app_logo">Work Time Tracker</string>
    <string name="remember_username">Remember Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="choose_job">Choose your job type:</string>
    <string name="job_title"></string>
    <string name="employer"></string>
    <string name="hourly_wage" />
    <string name="avg_hours" />
    <string name="second_job">Do you have a second job?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="company" />
    <string name="company_name_self_employed_only">Company Name</string>
    <string name="job_title_user">Job Title</string>
    <string name="employer_user">Employer</string>
    <string name="hourly_wage_user">Hourly Wage</string>
    <string name="average_hours_optional">Average Hours (optional)</string>
    <string name="Yes" />
    <string name="No" />
    <string name="Settings">\Settings</string>
    <string name="delete_all_jobs">Delete All jobs</string>
    <string name="settings_page">Settings</string>
    <string name="no_jobs_available">No jobs available to display</string>
    <string name="success_it_worked">It worked!</string>
    <string name="empty_fields">Please fill in empty field</string>
    <string name="submit_button">Submit</string>
</resources>
