<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popupbackground_border">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_scrollView2"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_welcome_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:text="Add/Editing Job"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="visible" />
            <TextView
                android:id="@+id/popup_tv_select_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/choose_job"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/popup_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                android:layout_marginStart="5dp"
                android:background="@android:drawable/btn_dropdown" />

            <EditText
                android:id="@+id/popup_txt_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/company_name_self_employed_only"
                android:inputType="textPersonName"
                android:text="@string/company" />

            <EditText
                android:id="@+id/popup_txt_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/job_title_user"
                android:inputType="textPersonName"
                android:text="@string/job_title" />

            <EditText
                android:id="@+id/popup_txt_hourly_wage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/hourly_wage_user"
                android:inputType="number|numberDecimal"
                android:text="@string/hourly_wage" />

            <EditText
                android:id="@+id/popup_txt_avg_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/average_hours_optional"
                android:inputType="number|numberDecimal"
                android:text="@string/avg_hours" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/Buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popupjob_btn_delete"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />

        <Button
            android:id="@+id/popupjob_btn_edit"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Edit" />

        <Button
            android:id="@+id/popupjob_btn_done"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:onClick="dialogevent"
            android:text="Done"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>
