<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="136dp"
        android:layout_height="128dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:labelFor="@+id/txt_name"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_app_logo" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:labelFor="@+id/txt_username"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/img_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:labelFor="@+id/txt_password"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

    <EditText
        android:id="@+id/txt_confirm_password"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/confirm_password"
        android:labelFor="@+id/txt_confirm_password"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/img_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:labelFor="@+id/txt_email"
        app:layout_constraintBottom_toTopOf="@+id/txt_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password" />

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone_number"
        android:labelFor="@+id/txt_phone"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/img_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/sign_up"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
</android.support.constraint.ConstraintLayout>
